// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkVerificationInfo renders correctly 1`] = `
<View
  testID="approve-network-modal"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "height": 56,
        },
        false,
        {
          "paddingHorizontal": 16,
        },
      ]
    }
    testID="header"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Add Test Chain
      </Text>
    </View>
  </View>
  <RCTScrollView
    collapsable={false}
    handlerTag={2}
    handlerType="NativeViewGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <TouchableOpacity
        disabled={true}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#f3f5f9",
            "borderRadius": 16,
            "flexDirection": "row",
            "height": 32,
            "marginBottom": 16,
            "paddingHorizontal": 8,
          }
        }
      >
        <View
          style={null}
        >
          <View
            accessibilityLabel="Test Chain"
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 16,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 16,
              }
            }
            testID="network-avatar-picker"
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#121314",
              "flexShrink": 1,
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginHorizontal": 8,
            }
          }
          testID="open-networks-text"
        >
          Test Chain
        </Text>
      </TouchableOpacity>
      <View
        style={
          {
            "backgroundColor": "#9a63001a",
            "borderColor": "#9a6300",
            "borderLeftWidth": 4,
            "borderRadius": 4,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 12,
            "paddingLeft": 8,
          }
        }
        testID="error-message-warning"
        variant="Alert"
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <SvgMock
            color="#9a6300"
            fill="currentColor"
            height={24}
            name="Danger"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            It looks like this network's display name doesn't match its chain ID.
          </Text>
        </View>
        <View
          style={
            {
              "marginLeft": 12,
            }
          }
        >
          <TouchableOpacity
            accessible={true}
            activeOpacity={1}
            disabled={false}
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="banner-close-button-icon"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={16}
              name="Close"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
      </View>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          }
        }
      >
        MetaMask doesn’t verify custom networks, so only approve networks you trust.
         
        <Text
          accessibilityRole="text"
          onPress={[Function]}
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Learn more about network security risks and scams.
        </Text>
      </Text>
      <RCTScrollView
        collapsable={false}
        contentContainerStyle={
          {
            "paddingBottom": 24,
          }
        }
        handlerTag={1}
        handlerType="NativeViewGestureHandler"
        nestedScrollEnabled={true}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 10,
            "borderWidth": 1,
            "flex": 1,
            "marginVertical": 16,
            "padding": 16,
          }
        }
      >
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Currency symbol
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            TEST
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network RPC URL
            </Text>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            http://test.com
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Chain ID
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            10
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Display name
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            Test Chain
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Block explorer URL
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            http://explorer.test.com
          </Text>
        </View>
      </RCTScrollView>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "flexDirection": "row",
        "paddingHorizontal": 16,
        "paddingVertical": 4,
      }
    }
    testID="bottomsheetfooter"
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#3c4d9d0f",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="approve-network-cancel-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "marginLeft": 16,
          "marginTop": 0,
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="approve-network-approve-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Confirm
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`NetworkVerificationInfo renders updated details when isNetworkRpcUpdate is true 1`] = `
<View
  testID="approve-network-modal"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "height": 56,
        },
        false,
        {
          "paddingHorizontal": 16,
        },
      ]
    }
    testID="header"
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Bold",
            "fontSize": 18,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Update Test Chain
      </Text>
    </View>
  </View>
  <RCTScrollView
    collapsable={false}
    handlerTag={4}
    handlerType="NativeViewGestureHandler"
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    style={
      {
        "backgroundColor": "#ffffff",
        "paddingHorizontal": 16,
      }
    }
  >
    <View>
      <TouchableOpacity
        disabled={true}
        style={
          {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#f3f5f9",
            "borderRadius": 16,
            "flexDirection": "row",
            "height": 32,
            "marginBottom": 16,
            "paddingHorizontal": 8,
          }
        }
      >
        <View
          style={null}
        >
          <View
            accessibilityLabel="Test Chain"
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#ffffff",
                "borderRadius": 4,
                "height": 16,
                "justifyContent": "center",
                "overflow": "hidden",
                "width": 16,
              }
            }
            testID="network-avatar-picker"
          >
            <Image
              onError={[Function]}
              resizeMode="contain"
              source={1}
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              testID="network-avatar-image"
            />
          </View>
        </View>
        <Text
          accessibilityRole="text"
          numberOfLines={1}
          style={
            {
              "color": "#121314",
              "flexShrink": 1,
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginHorizontal": 8,
            }
          }
          testID="open-networks-text"
        >
          Test Chain
        </Text>
      </TouchableOpacity>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "textAlign": "center",
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist-Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          You're updating this network in MetaMask and giving metamask.github.io permission to use it.
        </Text>
      </Text>
      <RCTScrollView
        collapsable={false}
        contentContainerStyle={
          {
            "paddingBottom": 24,
          }
        }
        handlerTag={3}
        handlerType="NativeViewGestureHandler"
        nestedScrollEnabled={true}
        onGestureHandlerEvent={[Function]}
        onGestureHandlerStateChange={[Function]}
        style={
          {
            "borderColor": "#b7bbc8",
            "borderRadius": 10,
            "borderWidth": 1,
            "flex": 1,
            "marginVertical": 16,
            "padding": 16,
          }
        }
      >
        <View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Currency symbol
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            AVAX
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "gap": 8,
              }
            }
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#4459ff",
                  "fontFamily": "Geist-Medium",
                  "fontSize": 16,
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            >
              Network RPC URL
            </Text>
            <TouchableOpacity
              onPress={[Function]}
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "alignSelf": "flex-start",
                    "backgroundColor": "#4459ff1a",
                    "borderRadius": 4,
                    "height": 20,
                    "justifyContent": "center",
                    "paddingHorizontal": 8,
                  }
                }
                testID="tagcolored"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "gap": 4,
                    }
                  }
                  testID="networks.rpc-url-missmatch-review-and-compare"
                >
                  <SvgMock
                    color="#4459ff"
                    fill="currentColor"
                    height={16}
                    name="Info"
                    style={
                      {
                        "height": 16,
                        "width": 16,
                      }
                    }
                    width={16}
                  />
                  <Text
                    accessibilityRole="text"
                    style={
                      {
                        "color": "#4459ff",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 14,
                        "letterSpacing": 0,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Review
                  </Text>
                  <SvgMock
                    color="#4459ff"
                    fill="currentColor"
                    height={12}
                    name="ArrowRight"
                    style={
                      {
                        "height": 12,
                        "width": 12,
                      }
                    }
                    width={12}
                  />
                </View>
              </View>
            </TouchableOpacity>
          </View>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            https://custom-rpc-url.io
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Chain ID
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            43114
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Display name
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
                "marginBottom": 8,
              }
            }
          >
            Test Chain
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Block explorer URL
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          />
        </View>
      </RCTScrollView>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "flexDirection": "row",
        "paddingHorizontal": 16,
        "paddingVertical": 4,
      }
    }
    testID="bottomsheetfooter"
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#3c4d9d0f",
          "borderColor": "transparent",
          "borderRadius": 12,
          "borderWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="approve-network-cancel-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Cancel
      </Text>
    </TouchableOpacity>
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flex": 1,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "marginLeft": 16,
          "marginTop": 0,
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
      testID="approve-network-approve-button"
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Confirm
      </Text>
    </TouchableOpacity>
  </View>
</View>
`;
